# CRM

./: .gitignore  CMakeLists.txt  CrmSrc.rar  README.md  location.hpp  main.cpp
DataBase/: CMakeLists.txt
DataBase/DealDataBase/: deal_db.cpp  deal_db.hpp
DataBase/InteractionDataBase/: interaction_data_base.cpp  interaction_data_base.hpp
DataBase/PersonDataBase/: client_db.cpp  client_db.hpp  external_employee_db.cpp  external_employee_db.hpp  internal_employee_db.cpp  internal_employee_db.hpp  person_db.cpp  person_db.hpp
DataBase/TaskDataBase/: task_db.cpp  task_db.hpp
DataBase/TenantContext/: tenant_context.hpp
DataModels/: CMakeLists.txt
DataModels/Address/: address.cpp  address.hpp
DataModels/BigNum/: big_uint.cpp  big_uint.hpp  money.cpp  money.hpp
DataModels/Campaign/: campaign.cpp  campaign.hpp  campaign_lead.cpp  campaign_lead.hpp
DataModels/Case/: case.cpp  case.hpp
DataModels/ChangeLog/: change_log.cpp  change_log.hpp  fields_enums.hpp
DataModels/Company/: company.cpp  company.hpp
DataModels/Company/ExternalCompany/: external_company.cpp  external_company.hpp
DataModels/Currencies/: currencies.hpp
DataModels/DateTime/: date.cpp  date.hpp  time_duration.cpp  time_duration.hpp
DataModels/Deal/: deal.cpp  deal.hpp
DataModels/Document/: document.cpp  document.hpp
DataModels/FIleMetadata/: file_metadata.cpp  file_metadata.hpp
DataModels/FileMetadata/: file_metadata.cpp  file_metadata.hpp
DataModels/Interaction/: base_interaction.cpp  base_interaction.hpp  commentary_social_networks.cpp  commentary_social_networks.hpp  commentary_social_networks_thread.cpp  commentary_social_networks_thread.hpp  correspondence.cpp  correspondence.hpp  email_letter.cpp  email_letter.hpp  email_thread.cpp  email_thread.hpp  interaction_result.cpp  interaction_result.hpp  meeting.cpp  meeting.hpp  meeting_thread.cpp  meeting_thread.hpp  message.cpp  message.hpp  phone_call_data.cpp  phone_call_data.hpp  priority.hpp
DataModels/Note/: note.cpp  note.hpp
DataModels/Offering/: offer_deal.cpp  offer_deal.hpp  offering.cpp  offering.hpp
DataModels/Payment/: payment.cpp  payment.hpp
DataModels/Person/: person.cpp  person.hpp
DataModels/Person/Client/: client.cpp  client.hpp
DataModels/Person/Employee/: employee_enums.hpp  external_employee.cpp  external_employee.hpp  internal_employee.cpp  internal_employee.hpp
DataModels/PhoneNumber/: phone_number.cpp  phone_number.hpp
DataModels/Report/: report.cpp  report.hpp
DataModels/SocialNetwork/: social_network.cpp  social_network.hpp
DataModels/Task/: task.cpp  task.hpp
DataModels/UserSession/: session_manager.cpp  session_manager.hpp  user_session.cpp  user_session.hpp
DataModels/Usings/: type_usings.hpp
Logger/: events_log.cpp  events_log.hpp
Tests/: tests_headers.hpp  tests_main.cpp
Tests/BigNum/: big_uint_tests.hpp  money_tests.hpp
Tests/ChangeLog/: chagne_log_tests.hpp  enums_to_str_tests.hpp
Tests/DateTime/: date_tests.hpp  time_duration_tests.hpp
Tests/Person/: client_tests.hpp  external_employee_tests.hpp  internal_employee_tests.hpp  person_tests.hpp
Tests/PhoneNumber/: phone_number_tests.hpp
Tests/Task/: task_tests.hpp
